#1618: Converted GetEmployeeTypes UC to extend BasePaginatedMultipleEntitiesCommand